tests/positive/ImportAsOpen/Other.juvix
module Other;

axiom A : Type;
