tests/negative/DanglingJudoc.juvix
module DanglingJudoc;

axiom A : Type;

--- hello
